[project]
name = "langgraph-opensearch-store"
version = "0.1.8"
description = "LangGraph BaseStore implementation backed by OpenSearch with Pydantic configuration."
readme = "README.md"
authors = [
  {name = "NTTDATA China Team", email = "unidotnet@gmail.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0",
  "langchain-core>=1.0",
  "langchain-openai>=1.0",
  "opensearch-py>=2.6",
  "pydantic>=2.12",
  "pydantic-settings>=2.12",
  "click>=8.1",
]

[project.optional-dependencies]
aws = [
  "boto3>=1.40",
  "requests-aws4auth>=1.3",
]
dev = [
  "pytest>=9.0",
  "ruff>=0.14",
  "pyright>=1.1",
]
system = [
  "psycopg[binary,pool]>=3.2",
  "langgraph-checkpoint-postgres>=3.0",
]

[build-system]
requires = ["uv-build>=0.9"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "integration: integration tests requiring external services",
    "contract: contract tests comparing stores",
]
[project.scripts]
langgraph-opensearch = "langgraph_opensearch_store.cli:main"
